force-app/main/default/objects/sfLma__Package__c/sfLma__Package__c.object-meta.xml
<CustomObject>
    <description>A Package Object represents information about the package as it is defined in the developer&apos;s Salesforce Organization. A record is created or updated each time a new version of the package is uploaded to AppExchange.</description>
    <label>Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>