force-app/main/default/objects/sfLma__Package__c/fields/sfLma__Last_License_Refresh__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Last_License_Refresh__c</fullName>
    <inlineHelpText>This is the last date the subscriber license records for this package were refreshed.  A package license refresh can only be run once every seven days.</inlineHelpText>
    <label>Last License Refresh</label>
    <type>Date</type>
</CustomField>