force-app/main/default/objects/sfLma__Package__c/fields/sfLma__Lead_Manager__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Lead_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User in the LMO who is responsible for managing the leads generated for this package. They will become the owner of any lead generated.</description>
    <label>Lead Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N30000001JvRJEA0</relationshipName>
    <type>Lookup</type>
</CustomField>